network/natgateway.tf
resource "aws_eip" "nat_gateway" {
    count      = var.az_count
    domain = "vpc"
    depends_on = [aws_internet_gateway.main]
}

resource "aws_nat_gateway" "main" {
    count         = var.az_count
    subnet_id     = element(aws_subnet.public.*.id, count.index)
    allocation_id = element(aws_eip.nat_gateway.*.id, count.index)
}
